# ClankerBench

./: Readme.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/clanker_bench/: render.py
src/clanker_bench/agents/: agent.py  random_agent.py
src/clanker_bench/game/: deck.py  engine.py  setup.py
src/clanker_bench/game/model/: action.py  card.py  config.py  exception.py  gamestate.py  player_state.py  scoreboard.py
src/clanker_bench/game/rules/: play_card_rules.py  predict_trick_rules.py  trump_selection_rules.py
src/clanker_bench/runner/: run.py
tests/clanker_bench/game/: test_deck.py  test_engine.py  test_scoring.py  test_setup.py  test_trick_resolution.py
tests/clanker_bench/game/rules/: test_play_card_rules.py  test_trump_selection_rules.py
tests/game/: conftest.py  test_deck.py  test_engine.py  test_game_flow.py  test_scoring.py  test_setup.py  test_step.py  test_trick_resolution.py
tests/game/rules/: test_play_card_rules.py  test_predict_tricks_rules.py  test_trump_selection_rules.py
